# emuiibo

./: .gitignore  .gitmodules  Amiibo-specs.txt  Makefile  README.md  Usage.md  emuiibo.json  emuiibo.lst  temp-040-changelog.md
.github/: FUNDING.yml
.github/workflows/: emuiibo.yml  emuiigen.yml  emutool.yml  main.yml
Include/emu/: emu_Consts.hpp  emu_Emulation.hpp  emu_IEmulationService.hpp  emu_Status.hpp  emu_Types.hpp
Include/mii/: mii_Service.hpp
Include/nfp/: nfp_Types.hpp
Include/nfp/sys/: sys_ISystem.hpp  sys_ISystemManager.hpp
Include/nfp/user/: user_IUser.hpp  user_IUserManager.hpp
Source/: Main.cpp
Source/emu/: emu_Emulation.cpp  emu_IEmulationService.cpp  emu_Status.cpp  emu_Types.cpp
Source/mii/: mii_Service.cpp
Source/nfp/sys/: sys_ISystem.cpp  sys_ISystemManager.cpp
Source/nfp/user/: user_IUser.cpp  user_IUserManager.cpp
emuGUIibo/: emuGUIibo.sln
emuGUIibo/emuGUIibo/: AmiiboAPI.cs  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  emuGUIibo.csproj  mainForm.Designer.cs  mainForm.cs  mainForm.resx
emuiibo/: Cargo.toml  Makefile  aarch64-nintendo-switch-freestanding-crypto.json  aarch64-nintendo-switch-freestanding-crypto.ld  npdm.json
emuiibo-example/: Makefile
emuiibo-example/include/: emuiibo.h
emuiibo-example/source/: Main.cpp  emuiibo.c
emuiibo/.cargo/: config.toml
emuiibo/include/: Types.hpp  emu_Base.hpp  emu_Consts.hpp  emu_Results.hpp  emu_Types.hpp
emuiibo/include/amiibo/: amiibo_Areas.hpp  amiibo_Formats.hpp
emuiibo/include/emu/: emu_Consts.hpp  emu_Emulation.hpp  emu_IEmulationService.hpp  emu_Status.hpp  emu_Types.hpp
emuiibo/include/fs/: fs_FileSystem.hpp
emuiibo/include/ipc/: ipc_Utils.hpp
emuiibo/include/ipc/emu/: emu_EmulationService.hpp  emu_IEmulationService.hpp  emu_IVirtualAmiibo.hpp
emuiibo/include/ipc/mii/: mii_Service.hpp  mii_Utils.hpp
emuiibo/include/ipc/nfp/: nfp_Common.hpp  nfp_ICommonObjects.hpp  nfp_Types.hpp
emuiibo/include/ipc/nfp/sys/: sys_ISystem.hpp  sys_ISystemManager.hpp  sys_System.hpp  sys_SystemManager.hpp
emuiibo/include/ipc/nfp/user/: user_IUser.hpp  user_IUserManager.hpp  user_User.hpp  user_UserManager.hpp
emuiibo/include/logger/: logger_Logger.hpp
emuiibo/include/nfp/: nfp_ICommonObjects.hpp  nfp_Types.hpp
emuiibo/include/nfp/sys/: sys_ISystem.hpp  sys_ISystemManager.hpp
emuiibo/include/nfp/user/: user_IUser.hpp  user_IUserManager.hpp
emuiibo/include/sys/: sys_Common.hpp  sys_Emulation.hpp  sys_Locator.hpp  sys_System.hpp
emuiibo/source/: Main.cpp
emuiibo/source/amiibo/: amiibo_Areas.cpp  amiibo_Formats.cpp
emuiibo/source/emu/: emu_Emulation.cpp  emu_IEmulationService.cpp  emu_Status.cpp  emu_Types.cpp
emuiibo/source/ipc/mii/: mii_Service.cpp  mii_Utils.cpp
emuiibo/source/ipc/nfp/: nfp_Common.cpp  nfp_ICommonObjects.cpp
emuiibo/source/ipc/nfp/sys/: sys_ISystem.cpp  sys_System.cpp
emuiibo/source/ipc/nfp/user/: user_IUser.cpp  user_User.cpp
emuiibo/source/logger/: logger_Logger.cpp
emuiibo/source/mii/: mii_Service.cpp
emuiibo/source/nfp/: nfp_ICommonObjects.cpp
emuiibo/source/nfp/sys/: sys_ISystem.cpp
emuiibo/source/nfp/user/: user_IUser.cpp  user_IUserManager.cpp
emuiibo/source/sys/: sys_Common.cpp  sys_Emulation.cpp  sys_Locator.cpp  sys_System.cpp
emuiibo/src/: amiibo.rs  area.rs  emu.rs  fsext.rs  ipc.rs  lib.rs  logger.rs  main.rs  miiext.rs  rand.rs  rc.rs
emuiibo/src/amiibo/: bin.rs  compat.rs  fmt.rs  ntag.rs  v1.rs  v2.rs  v3.rs
emuiibo/src/ipc/: emu.rs  mod.rs  nfp.rs
emuiibo/src/ipc/nfp/: mod.rs  sys.rs  user.rs
emuiibo/src/resultsext/: emu.rs
emuiibo/sys-to-be-ported/: sys_ISystem.cpp  sys_ISystem.hpp  sys_ISystemManager.hpp
emuiigen/: pom.xml
emuiigen/res/: main.css  main.fxml
emuiigen/src/: Amiibo.kt  AmiiboAPI.kt  AmiiboAPIEntry.kt  AmiiboAreaEntry.kt  AmiiboAreaInfo.kt  AmiiboDate.kt  AmiiboId.kt  AmiiboStatus.kt  Main.kt  Utils.kt
emutool/: emutool.sln
emutool/emutool/: Amiibo.cs  AmiiboAPI.cs  AmiiboUtils.cs  ExceptionUtils.cs  FsUtils.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  NumberUtils.cs  Program.cs  Utils.cs  emutool.csproj  mainForm.cs  packages.config
nfpemu-libnx/: nfpemu.c  nfpemu.h
overlay/: Makefile
overlay/emuiibo/: lng_de.json  lng_es.json  lng_ru.json  lng_zh-Hans.json  lng_zh-Hant.json  lng_zh-TW.json
overlay/include/: AmiiboUtil.hpp  emuiibo.hpp  json.hpp  libtesla_ext.hpp  tipc.hpp  translation.h
overlay/lang/: de.json  fr.json  it.json  ko.json  zh-Hans.json  zh-Hant.json
overlay/source/: AmiiboUtil.cpp  Main.cpp  OverlayMain.cpp  emuiibo.cpp  translation.cpp
overlay/tools/: translation.py
source/: emu-amiibo.cpp  emu-amiibo.hpp  emuiibo_main.cpp  main.cpp  mii-shim.c  mii-shim.h  nfp-emu-service.cpp  nfp-emu-service.hpp  nfp-homebrew-service.cpp  nfp-homebrew-service.hpp  nfp-isystem.cpp  nfp-isystem.hpp  nfp-iuser.cpp  nfp-iuser.hpp  nfp-shim.c  nfp-shim.h  nfp-utils.hpp  nfp_shim.c  nfp_shim.h  nfp_user_interface.cpp  nfp_user_interface.hpp  nfpmitm_main.cpp  nfpsys-mitm-service.cpp  nfpsys-mitm-service.hpp  nfpuser-mitm-service.cpp  nfpuser-mitm-service.hpp  nfpuser_mitm_service.cpp  nfpuser_mitm_service.hpp
source/emu/: emu_Emulation.cpp  emu_IEmulationService.cpp  emu_Status.cpp
(+19 files in other folders)
