[package]
name = "emuiibo"
version = "0.7.0"
authors = ["XorTroll"]
edition = "2021"

[dependencies]
nx = { path = "../../aarch64-switch-rs/nx" }
paste = "1.0"

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["alloc"]

[package.metadata.nx.nsp]
npdm = "npdm.json"