[package]
name = "emuiibo"
version = "1.0.0"
authors = ["XorTroll"]
edition = "2021"

[dependencies]
nx = { git = "https://github.com/aarch64-switch-rs/nx" }
paste = "1.0"
static_assertions = "1.1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[package.metadata.nx.nsp]
npdm = "npdm.json"